syntax = "proto3";

package task;

enum State {
  pending = 0;
  running = 1;
  completed = 2;
  failed = 3;
  created = 4;
}

message Task {
  string name = 2;
  State state = 3;
  string image = 4;
  repeated PortBinding port_bindings = 5;
  string container_id = 6;
  Resources resources = 7;
}

message PortBinding {
  uint32 port = 1;
  string protocol = 2;
}

message TaskSet {
  string name = 1;
  repeated Task tasks = 2;
}

message Resources {
  ResourcesSpec requests = 1;
  ResourcesSpec limits = 2;
}

message ResourcesSpec {
  string memory = 1;
  string cpu = 2;
}